--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
                 <div class="product-containt">
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/sport-L2.webp" alt="">
+                            <img src="images/sport-L2.webp" alt="">
                             <div class="product-img2">
-                                <img src="/images/sport-L.jpg" alt="">
+                                <img src="images/sport-L.jpg" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -216,9 +216,9 @@
 
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/Kids-L.jpg" alt="">
+                            <img src="images/Kids-L.jpg" alt="">
                             <div class="product-img2">
-                                <img src="/images/kids-L3.jpg" alt="">
+                                <img src="images/kids-L3.jpg" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -243,9 +243,9 @@
 
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/mountain-L4.jpg_large" alt="">
+                            <img src="images/mountain-L4.jpg_large" alt="">
                             <div class="product-img2">
-                                <img src="/images/Mountain-L7.webp" alt="">
+                                <img src="images/Mountain-L7.webp" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -269,15 +269,13 @@
 
                 </div><!-- product containt -->
 
-
-
                 <div class="product-containt">
 
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/sport7.jpeg" alt="">
+                            <img src="images/sport7.jpeg" alt="">
                             <div class="product-img2">
-                                <img src="/images/sport6.jpeg" alt="">
+                                <img src="images/sport6.jpeg" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -301,9 +299,9 @@
 
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/modern-L2.avif" alt="">
+                            <img src="images/modern-L2.avif" alt="">
                             <div class="product-img2">
-                                <img src="/images/modern.webp" alt="">
+                                <img src="images/modern.webp" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -328,9 +326,9 @@
 
                     <div class="product-item">
                         <div class="product-img">
-                            <img src="/images/mountain-L5.jpeg" alt="">
+                            <img src="images/mountain-L5.jpeg" alt="">
                             <div class="product-img2">
-                                <img src="/images/mountain2.webp" alt="">
+                                <img src="images/mountain2.webp" alt="">
                                 <div class="product-img2-icons">
                                     <ul>
                                         <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
@@ -346,7 +344,7 @@
                             <i class="active fa fa-star fa-sm"></i>
                             <i class="active fa fa-star fa-sm"></i>
                             <i class="active fa fa-star fa-sm"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <i class="active fa fa-star fa-sm"></i>
                             <p>Mountain items</p>
                             <h3>800$</h3>
                         </div><!--product-info  -->
